# aa-corptools-dashboard

./: .coveragerc  .isort.cfg  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  suggestion_report.yaml
.github/workflows/: autotester.yml
ct_dashboard/: __init__.py  apps.py  auth_hooks.py  views.py
ct_dashboard/locale/de/LC_MESSAGES/: django.po
ct_dashboard/locale/es/LC_MESSAGES/: django.po
ct_dashboard/locale/pl_PL/LC_MESSAGES/: django.po
ct_dashboard/locale/ru/LC_MESSAGES/: django.po
ct_dashboard/locale/sk/LC_MESSAGES/: django.po
ct_dashboard/locale/uk/LC_MESSAGES/: django.po
ct_dashboard/locale/zh_Hans/LC_MESSAGES/: django.po
ct_dashboard/templates/ct_dashboard/: dashboard.html
ct_dashboard/tests/: test_auth_hook.py  test_views.py
ct_dashboard/tests/testdata/: load_characteraudit.py  utils.py
testauth/settings/: local.py
